[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/Textbox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/PixeloidSans-nR3g1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/TextboxPortrait.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/Sounds/Voiceblips/voiceblip-4.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Images/cursor.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.364706, 0.364706, 0.364706, 1 )
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=10]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 940, 165 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 940, 165 ), Vector2( 940, 170 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 940, 165 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextboxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portraits/1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portraits/2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Portraits/Background:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.67451 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Portraits/1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 178, 250 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Portraits/1:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Portraits/1:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Portraits/2:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 3 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Portraits/2:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Portraits/2:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 853, 250 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("NameContainer:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextboxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portraits/1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portraits/2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Portraits/Background:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.67451 ), Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Portraits/1:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 0.1, 0.1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Portraits/1:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Portraits/2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 3 ), Vector2( -0.1, 0.1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Portraits/2:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("NameContainer:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Portraits/1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 178, 250 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portraits/1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portraits/2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 853, 250 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Portraits/2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, 3 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextboxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portraits/1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.109804 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portraits/2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.109804 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Portraits/Background:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.67451 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Portraits/1:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 3, 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Portraits/1:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Portraits/2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.1, 0.1 ), Vector2( -3, 3 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Portraits/2:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -180.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("NameContainer:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "talk-1"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Portraits/1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 178, 250 ), Vector2( 174, 269.5 ), Vector2( 178, 250 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portraits/1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 4.36956, 2.72535 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "talk-2"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Portraits/2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 853, 250 ), Vector2( 863.488, 276.97 ), Vector2( 853, 250 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portraits/2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 3 ), Vector2( -4.85858, 2.725 ), Vector2( -3, 3 ) ]
}

[node name="Textbox" type="CanvasLayer" groups=["textbox"]]
pause_mode = 2
script = ExtResource( 1 )

[node name="Portraits" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Portraits"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.67451 )

[node name="1" type="Sprite" parent="Portraits"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 178, 250 )
rotation = 3.14159
scale = Vector2( 3, 3 )
script = ExtResource( 3 )

[node name="2" type="Sprite" parent="Portraits"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 853, 250 )
scale = Vector2( -3, 3 )
script = ExtResource( 3 )
character_portrait = 2

[node name="TextboxContainer" type="MarginContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -490.0
margin_top = -216.0
margin_right = 490.0
margin_bottom = -15.0

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 980.0
margin_bottom = 201.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 980.0
margin_bottom = 201.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 22
custom_constants/margin_bottom = 16

[node name="RichTextLabel" type="RichTextLabel" parent="TextboxContainer/MarginContainer"]
margin_left = 22.0
margin_top = 16.0
margin_right = 964.0
margin_bottom = 185.0
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="Cursor" type="Sprite" parent="TextboxContainer"]
visible = false
position = Vector2( 940, 165 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextboxContainer/Cursor"]
anims/RESET = SubResource( 11 )
anims/idle = SubResource( 12 )
anims/reset = SubResource( 13 )

[node name="NameContainer" type="MarginContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 22.0
margin_top = 319.0
margin_right = 232.0
margin_bottom = 395.0

[node name="Panel" type="Panel" parent="NameContainer"]
margin_right = 210.0
margin_bottom = 76.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="NameContainer"]
margin_right = 210.0
margin_bottom = 76.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 22
custom_constants/margin_bottom = 16

[node name="Label" type="Label" parent="NameContainer/MarginContainer"]
margin_left = 22.0
margin_top = 16.0
margin_right = 194.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "NAME"
align = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/close = SubResource( 6 )
anims/idle = SubResource( 9 )
anims/open = SubResource( 5 )
anims/talk-1 = SubResource( 7 )
anims/talk-2 = SubResource( 8 )

[node name="Voiceblips" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="Voiceblips" to="." method="_on_Voiceblips_finished"]
